# rfBooksClassificationApp

./: .gitignore  README.md  main.py  pyproject.toml  train.py
doc/: design.md  proposal.md  test.md
src/: classifier.py  dataset.py  preprocess.py  rf_model.py  trainer.py  transformer_model.py  utils.py  word2vec_model.py
tests/: conftest.py  test_classifier.py  test_preprocess.py  test_rf_model.py  test_transformer.py
