[project]
name = "rfbooksclassificationapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42",
    "gensim>=4.3",
    "scikit-learn>=1.5",
    "torch>=2.4",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "pytest>=8.3",
]
